# hindsight

./: package-lock.json  package.json
.github/workflows/: release.yml  test.yml
hindsight-api/: pyproject.toml
hindsight-api-slim/: pyproject.toml
hindsight-api-slim/hindsight_api/: config.py
hindsight-api-slim/tests/: test_bank_templates.py  test_consolidation.py  test_llm_provider.py  test_mcp_endpoint_routing.py  test_retain.py
hindsight-api/hindsight_api/: config.py  main.py
hindsight-api/tests/: test_entity_labels.py  test_hierarchical_config.py  test_webhooks.py
hindsight-clients/go/: model_create_bank_request.go  model_operation_response.go  model_operation_status_response.go
hindsight-docs/: docusaurus.config.ts  sidebars.ts
hindsight-docs/blog/: 2026-03-06-adding-memory-to-openclaw-with-hindsight.md  2026-03-09-hindsight-document-upload.md  2026-03-10-run-hindsight-with-ollama.md  2026-03-12-spreading-activation-memory-graphs.md  2026-03-16-n8n-memory-workflows.md  2026-03-17-hermes-agent-memory.md  2026-03-17-langgraph-longterm-memory.md  2026-03-20-gpt54-leaderboard.md  2026-03-23-claude-code-telegram.md  2026-03-23-llamaindex-memory.md  2026-03-25-strands-persistent-memory.md  2026-03-26-llamaindex-agent-memory.md  authors.yml  (+5 more)
hindsight-integrations/opencode/: README.md  pyproject.toml
hindsight-integrations/opencode/backfill/: README.md  backfill.py
hindsight-integrations/opencode/src/: bank.ts  client.ts  config.ts  daemon.ts  index.ts  retain.ts
hindsight-integrations/opencode/tests/: config.test.ts
scripts/: release-integration.sh
(+100 files in other folders)
