[project]
name = "hindsight-opencode-backfill"
version = "0.1.0"
description = "Backfill OpenCode and JSONL coding session transcripts into Hindsight for long-term agent memory"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vectorize", email = "support@vectorize.io" }
]
keywords = [
    "ai",
    "memory",
    "opencode",
    "backfill",
    "agents",
    "hindsight",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "hindsight-client>=0.4.0,<1.0",
]

[project.scripts]
hindsight-backfill = "backfill.backfill:main"

[project.urls]
Homepage = "https://github.com/vectorize-io/hindsight"
Documentation = "https://github.com/vectorize-io/hindsight/tree/main/hindsight-integrations/opencode"
Repository = "https://github.com/vectorize-io/hindsight"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backfill"]
